--- a/services.html
+++ b/services.html
@@ -5,12 +5,12 @@
   <title>Services | Fast Current Electric LLC</title>
   <meta name="description" content="Explore the residential electrical services offered by Fast Current Electric LLC in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="pictures/favicon.png" type="image/png">
+  <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
     .site-header { display: flex; flex-direction: column; align-items: center;
-      background-image: url('pictures/background.png'); background-size: cover;
+      background-image: url('images/background.png'); background-size: cover;
       background-position: center; color: white; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
 
@@ -57,7 +57,7 @@
 <body>
 
 <header class="site-header">
-  <img src="pictures/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.png" alt="Logo" class="logo">
   <h1>Services</h1>
 </header>
 
@@ -74,91 +74,91 @@
   <div class="services">
 
     <div class="card">
-      <img src="pictures/Circuit Breaker Installation.jpg" alt="">
+      <img src="images/Circuit Breaker Installation.jpg" alt="">
       Circuit Breaker Installation
       <small>Installing new breakers for safe and reliable electrical service in your home.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Electric Inspection.jpg" alt="">
+      <img src="images/Electric Inspection.jpg" alt="">
       Electric Inspection
       <small>Detailed system safety checks to identify hazards and ensure code compliance.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Electric Panel Installation.jpg" alt="">
+      <img src="images/Electric Panel Installation.jpg" alt="">
       Electric Panel Installation
       <small>New service panel installation for increased capacity and safety.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Electric Repair.jpg" alt="">
+      <img src="images/Electric Repair.jpg" alt="">
       Electric Repair
       <small>Repairing faulty connections, circuits, and system components to restore function.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Wire Repair.jpg" alt="">
+      <img src="images/Wire Repair.jpg" alt="">
       Wire Repair
       <small>Fixing damaged, frayed, or outdated wiring for improved safety and reliability.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/generator.jpg" alt="">
+      <img src="images/generator.jpg" alt="">
       Generator Installation
       <small>Backup power setup to keep essential systems running during outages.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Light Fixture Repair.jpg" alt="">
+      <img src="images/Light Fixture Repair.jpg" alt="">
       Light Fixture Repair
       <small>Restoring lighting fixtures and diagnosing wiring problems.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/outlet installation.jpg" alt="">
+      <img src="images/outlet installation.jpg" alt="">
       Outlet Repair
       <small>Fixing dead, damaged, or unsafe outlets and switches.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Circuit Breaker Repair.jpg" alt="">
+      <img src="images/Circuit Breaker Repair.jpg" alt="">
       Circuit Breaker Repair
       <small>Diagnosing breaker failures and restoring proper electrical protection.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Electric Installation or Replacement.jpg" alt="">
+      <img src="images/Electric Installation or Replacement.jpg" alt="">
       Electric Installation or Replacement
       <small>Installing or upgrading electrical components and equipment.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Electric Panel Repair.jpg" alt="">
+      <img src="images/Electric Panel Repair.jpg" alt="">
       Electric Panel Repair
       <small>Correcting panel issues to ensure safe and consistent power distribution.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/Wire Installation.JPG" alt="">
+      <img src="images/Wire Installation.JPG" alt="">
       Wire Installation
       <small>Running new wiring for remodels, additions, or upgraded systems.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/car charging.jpg" alt="">
+      <img src="images/car charging.jpg" alt="">
       Electric Vehicle Charging Station Installation
       <small>Home charging solutions for electric vehicles.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/light-bulbs.jpg" alt="">
+      <img src="images/light-bulbs.jpg" alt="">
       Light Fixture Installation
       <small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small>
     </div>
 
     <div class="card">
-      <img src="pictures/wire in outlet.jpg" alt="">
+      <img src="images/wire in outlet.jpg" alt="">
       Outlet Installation
       <small>Adding new outlets and switches to improve convenience and accessibility.</small>
     </div>
