--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.png" alt="Logo" class="logo">
   <h1>Contact</h1>
 </header>
 
