--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.png" alt="Logo" class="logo">
   <h1>Home</h1>
 </header>
 
