--- a/tips.html
+++ b/tips.html
@@ -45,7 +45,7 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.png" alt="Logo" class="logo">
   <h1>Safety Tips</h1>
 </header>
 
