--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -42,7 +42,7 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.png" alt="Logo" class="logo">
   <h1>Why Choose Us</h1>
 </header>
 
