--- a/services.html
+++ b/services.html
@@ -64,20 +64,20 @@
   <div class="services">
     <div class="card"><img src="images/Electric Panel Upgrades.jpg" alt="Outlet & Switch Replacement">Outlet & Switch Replacement<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
     <div class="card"><img src="images/light-bulbs.jpg" alt="Electric Inspection">Electric Inspection<small>Detailed system safety checks to identify hazards and ensure code compliance.</small></div>
-    <div class="card"><img src="images/wires.jpg" alt="Electric Panel Installation">Electric Panel Installation<small>New service panel installation for increased capacity and safety.</small></div>
-    <div class="card"><img src="images/outlet-installation.jpg" alt="Electrical Troubleshooting">Electrical Troubleshooting<small>Diagnosing and fixing electrical issues to restore system functionality.</small></div>
+    <div class="card"><img src="images/Wires.jpg" alt="Electric Panel Installation">Electric Panel Installation<small>New service panel installation for increased capacity and safety.</small></div>
+    <div class="card"><img src="images/panel.jpg" alt="Electrical Troubleshooting">Electrical Troubleshooting<small>Diagnosing and fixing electrical issues to restore system functionality.</small></div>
     <div class="card"><img src="images/Wire Repair.jpg" alt="Wire Repair">Wire Repair<small>Fixing damaged, frayed, or outdated wiring for improved safety and reliability.</small></div>
     <div class="card"><img src="images/generator.jpg" alt="Generator Installation">Generator Installation<small>Backup power setup to keep essential systems running during outages.</small></div>
     <div class="card"><img src="images/Light Fixture Repair.jpg" alt="Light Fixture Repair">Light Fixture Repair<small>Restoring lighting fixtures and diagnosing wiring problems.</small></div>
-    <div class="card"><img src="images/Electric Panel Repair.jpg" alt="Outlet Repair">Outlet Repair<small>Fixing dead, damaged, or unsafe outlets and switches.</small></div>
+    <div class="card"><img src="images/wire in outlet.jpg" alt="Outlet Repair">Outlet Repair<small>Fixing dead, damaged, or unsafe outlets and switches.</small></div>
     <div class="card"><img src="images/Circuit Breaker Repair.jpg" alt="Circuit Breaker Repair">Circuit Breaker Repair<small>Diagnosing breaker failures and restoring proper electrical protection.</small></div>
     <div class="card"><img src="images/Electric Installation or Replacement.jpg" alt="Electric Installation or Replacement">Electric Installation or Replacement<small>Installing or upgrading electrical components and equipment.</small></div>
     <div class="card"><img src="images/Electric Panel Repair.jpg" alt="Electric Panel Repair">Electric Panel Repair<small>Correcting panel issues to ensure safe and consistent power distribution.</small></div>
     <div class="card"><img src="images/Wire Installation.JPG" alt="Wire Installation">Wire Installation<small>Running new wiring for remodels, additions, or upgraded systems.</small></div>
-    <div class="card"><img src="images/car-charging.jpg" alt="Electric Vehicle Charging Station Installation">Electric Vehicle Charging Station Installation<small>Home charging solutions for electric vehicles.</small></div>
-    <div class="card"><img src="images/Light Fixture Installation.jpg" alt="Light Fixture Installation">Light Fixture Installation<small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small></div>
+    <div class="card"><img src="images/car charging.jpg" alt="Electric Vehicle Charging Station Installation">Electric Vehicle Charging Station Installation<small>Home charging solutions for electric vehicles.</small></div>
+    <div class="card"><img src="images/Electric Repair.jpg" alt="Light Fixture Installation">Light Fixture Installation<small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small></div>
     <div class="card"><img src="images/Circuit Breaker Installation.jpg" alt="Circuit Breaker Installation">Circuit Breaker Installation<small>Installing new breakers for safe and reliable electrical service in your home.</small></div>
-    <div class="card"><img src="images/outlet-installation.jpg" alt="Outlet Installation">Outlet Installation<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
+    <div class="card"><img src="images/outlet installation.jpg" alt="Outlet Installation">Outlet Installation<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
   </div>
 </section>
 
