--- a/services.html
+++ b/services.html
@@ -8,83 +8,222 @@
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
-    .site-header { display: flex; flex-direction: column; align-items: center; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
-
-    .site-header h1 {
-        color: white;
-        font-weight: 900;
-        font-family: 'Arial Black', Arial, sans-serif;
-        font-size: 2.8rem;
-        text-shadow:
-            -2px -2px 0 black,
-            2px -2px 0 black,
-            -2px 2px 0 black,
-            2px 2px 0 black;
-        margin: 0;
+    /* Body styling */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      color: #222;
+      text-align: center;
     }
 
-    nav { background: #062a40; padding: 0.75rem; }
-    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    nav a.active { text-decoration: underline; color: #FFD700; }
+    /* Header styling: only logo on left */
+    .site-header {
+      display: flex;                  /* Flexbox layout */
+      flex-direction: row;            /* Horizontal layout */
+      align-items: center;            /* Vertically center items */
+      justify-content: flex-start;    /* Align items to the left */
+      background-image: url('images/background.png'); /* Header background */
+      background-size: cover;
+      background-position: center;
+      padding: 1.5rem 2rem;
+    }
 
-    section { padding: 2rem; max-width: 1000px; margin: auto; line-height: 1.6; }
-    section h2 { color: black; font-weight: bold; font-size: 1.8rem; margin-bottom: 1rem; }
+    /* Logo styling */
+    .logo {
+      max-height: 160px;
+      width: auto;
+    }
 
-    .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.95); text-align: center; }
-    .card img { width: 100%; height: 150px; object-fit: cover; border-radius: 5px; margin-bottom: 0.5rem; }
-    .card small { display: block; margin-top: 0.25rem; color: #555; font-size: 0.85rem; line-height: 1.3; }
+    /* Navigation bar styling */
+    nav {
+      background: #062a40;
+      padding: 0.75rem;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    nav a.active {
+      text-decoration: underline;
+      color: #FFD700; /* Highlight active page */
+    }
 
-    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
-    .contact-link { color: black; text-decoration: none; font-weight: bold; }
-    .contact-link:hover { text-decoration: underline; }
+    /* Section styling */
+    section {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
+      line-height: 1.6;
+    }
+    section h2 {
+      color: black;
+      font-weight: bold;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
+    /* Services grid layout */
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+
+    /* Card styling for each service */
+    .card {
+      border: 1px solid #ddd;
+      padding: 1rem;
+      border-radius: 5px;
+      background: rgba(255,255,255,0.95);
+      text-align: center;
+    }
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover; /* Ensure images cover card nicely */
+      border-radius: 5px;
+      margin-bottom: 0.5rem;
+    }
+    .card small {
+      display: block;
+      margin-top: 0.25rem;
+      color: #555;
+      font-size: 0.85rem;
+      line-height: 1.3;
+    }
+
+    /* Footer styling */
+    footer {
+      background: #f4f4f4;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+    .contact-link {
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .contact-link:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 
 <body>
 
-<header class="site-header">
-  <img src="images/FCELLC.png" alt="Logo" class="logo">
-  <h1>Services</h1>
-</header>
+  <!-- Header: only logo on left -->
+  <header class="site-header">
+    <img src="images/FCELLC.png" alt="Fast Current Electric Logo" class="logo">
+  </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html" class="active">Services</a>
-  <a href="tips.html">Safety Tips</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-  <a href="contact.html">Contact</a>
-</nav>
+  <!-- Navigation menu -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="services.html" class="active">Services</a>
+    <a href="tips.html">Safety Tips</a>
+    <a href="why-choose-us.html">Why Choose Us</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-<section>
-  <h2>What We Offer</h2>
-  <div class="services">
-    <div class="card"><img src="images/Electric Panel Upgrades.jpg" alt="Outlet & Switch Replacement">Outlet & Switch Replacement<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
-    <div class="card"><img src="images/light-bulbs.jpg" alt="Electric Inspection">Electric Inspection<small>Detailed system safety checks to identify hazards and ensure code compliance.</small></div>
-    <div class="card"><img src="images/Wires.jpg" alt="Electric Panel Installation">Electric Panel Installation<small>New service panel installation for increased capacity and safety.</small></div>
-    <div class="card"><img src="images/panel.jpg" alt="Electrical Troubleshooting">Electrical Troubleshooting<small>Diagnosing and fixing electrical issues to restore system functionality.</small></div>
-    <div class="card"><img src="images/Wire Repair.jpg" alt="Wire Repair">Wire Repair<small>Fixing damaged, frayed, or outdated wiring for improved safety and reliability.</small></div>
-    <div class="card"><img src="images/generator.jpg" alt="Generator Installation">Generator Installation<small>Backup power setup to keep essential systems running during outages.</small></div>
-    <div class="card"><img src="images/Light Fixture Repair.jpg" alt="Light Fixture Repair">Light Fixture Repair<small>Restoring lighting fixtures and diagnosing wiring problems.</small></div>
-    <div class="card"><img src="images/wire in outlet.jpg" alt="Outlet Repair">Outlet Repair<small>Fixing dead, damaged, or unsafe outlets and switches.</small></div>
-    <div class="card"><img src="images/Circuit Breaker Repair.jpg" alt="Circuit Breaker Repair">Circuit Breaker Repair<small>Diagnosing breaker failures and restoring proper electrical protection.</small></div>
-    <div class="card"><img src="images/Electric Installation or Replacement.jpg" alt="Electric Installation or Replacement">Electric Installation or Replacement<small>Installing or upgrading electrical components and equipment.</small></div>
-    <div class="card"><img src="images/Electric Panel Repair.jpg" alt="Electric Panel Repair">Electric Panel Repair<small>Correcting panel issues to ensure safe and consistent power distribution.</small></div>
-    <div class="card"><img src="images/Wire Installation.JPG" alt="Wire Installation">Wire Installation<small>Running new wiring for remodels, additions, or upgraded systems.</small></div>
-    <div class="card"><img src="images/car charging.jpg" alt="Electric Vehicle Charging Station Installation">Electric Vehicle Charging Station Installation<small>Home charging solutions for electric vehicles.</small></div>
-    <div class="card"><img src="images/Electric Repair.jpg" alt="Light Fixture Installation">Light Fixture Installation<small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small></div>
-    <div class="card"><img src="images/Circuit Breaker Installation.jpg" alt="Circuit Breaker Installation">Circuit Breaker Installation<small>Installing new breakers for safe and reliable electrical service in your home.</small></div>
-    <div class="card"><img src="images/outlet installation.jpg" alt="Outlet Installation">Outlet Installation<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
-  </div>
-</section>
+  <!-- Main services section -->
+  <section>
+    <h2>What We Offer</h2>
+    <div class="services">
+      <!-- Example service cards -->
+      <div class="card">
+        <img src="images/Electric Panel Upgrades.jpg" alt="Outlet & Switch Replacement">
+        <strong>Outlet & Switch Replacement</strong>
+        <small>Adding new outlets and switches to improve convenience and accessibility.</small>
+      </div>
+      <div class="card">
+        <img src="images/light-bulbs.jpg" alt="Electric Inspection">
+        <strong>Electric Inspection</strong>
+        <small>Detailed system safety checks to identify hazards and ensure code compliance.</small>
+      </div>
+      <div class="card">
+        <img src="images/Wires.jpg" alt="Electric Panel Installation">
+        <strong>Electric Panel Installation</strong>
+        <small>New service panel installation for increased capacity and safety.</small>
+      </div>
+      <div class="card">
+        <img src="images/panel.jpg" alt="Electrical Troubleshooting">
+        <strong>Electrical Troubleshooting</strong>
+        <small>Diagnosing and fixing electrical issues to restore system functionality.</small>
+      </div>
+      <div class="card">
+        <img src="images/Wire Repair.jpg" alt="Wire Repair">
+        <strong>Wire Repair</strong>
+        <small>Fixing damaged, frayed, or outdated wiring for improved safety and reliability.</small>
+      </div>
+      <div class="card">
+        <img src="images/generator.jpg" alt="Generator Installation">
+        <strong>Generator Installation</strong>
+        <small>Backup power setup to keep essential systems running during outages.</small>
+      </div>
+      <div class="card">
+        <img src="images/Light Fixture Repair.jpg" alt="Light Fixture Repair">
+        <strong>Light Fixture Repair</strong>
+        <small>Restoring lighting fixtures and diagnosing wiring problems.</small>
+      </div>
+      <div class="card">
+        <img src="images/wire in outlet.jpg" alt="Outlet Repair">
+        <strong>Outlet Repair</strong>
+        <small>Fixing dead, damaged, or unsafe outlets and switches.</small>
+      </div>
+      <div class="card">
+        <img src="images/Circuit Breaker Repair.jpg" alt="Circuit Breaker Repair">
+        <strong>Circuit Breaker Repair</strong>
+        <small>Diagnosing breaker failures and restoring proper electrical protection.</small>
+      </div>
+      <div class="card">
+        <img src="images/Electric Installation or Replacement.jpg" alt="Electric Installation or Replacement">
+        <strong>Electric Installation or Replacement</strong>
+        <small>Installing or upgrading electrical components and equipment.</small>
+      </div>
+      <div class="card">
+        <img src="images/Electric Panel Repair.jpg" alt="Electric Panel Repair">
+        <strong>Electric Panel Repair</strong>
+        <small>Correcting panel issues to ensure safe and consistent power distribution.</small>
+      </div>
+      <div class="card">
+        <img src="images/Wire Installation.JPG" alt="Wire Installation">
+        <strong>Wire Installation</strong>
+        <small>Running new wiring for remodels, additions, or upgraded systems.</small>
+      </div>
+      <div class="card">
+        <img src="images/car charging.jpg" alt="EV Charging Station">
+        <strong>Electric Vehicle Charging Station Installation</strong>
+        <small>Home charging solutions for electric vehicles.</small>
+      </div>
+      <div class="card">
+        <img src="images/Electric Repair.jpg" alt="Light Fixture Installation">
+        <strong>Light Fixture Installation</strong>
+        <small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small>
+      </div>
+      <div class="card">
+        <img src="images/Circuit Breaker Installation.jpg" alt="Circuit Breaker Installation">
+        <strong>Circuit Breaker Installation</strong>
+        <small>Installing new breakers for safe and reliable electrical service in your home.</small>
+      </div>
+      <div class="card">
+        <img src="images/outlet installation.jpg" alt="Outlet Installation">
+        <strong>Outlet Installation</strong>
+        <small>Adding new outlets and switches to improve convenience and accessibility.</small>
+      </div>
+    </div>
+  </section>
 
-<footer>
-  <p><a href="tel:3302349389" class="contact-link">(330) 234-9389</a> | <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
-  <p>&copy; 2025 Fast Current Electric LLC</p>
-</footer>
+  <!-- Footer with contact info -->
+  <footer>
+    <p><a href="tel:3302349389" class="contact-link">(330) 234-9389</a> | <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+    <p>&copy; 2025 Fast Current Electric LLC</p>
+  </footer>
 
 </body>
 </html>
